<resources>
    <string name="mobile_pqi">MobilePQI</string>
    <string name="tv_deskripsi_text">E-learning untuk\nPendidikan Qiroah dan\nIbadah</string>
    <string name="btn_mulai_text">Mulai</string>
    <string name="tv_signin_text">Sign In</string>
    <string name="tv_signup_text">Sign Up</string>
    <string name="tv_nip_nim_text">NIDN/NIP/NIM</string>
    <string name="tv_password_text">Password</string>
    <string name="tv_lupa_password_text">Lupa Password?</string>
    <string name="tv_belum_daftar_text">Belum Punya Akun?</string>
    <string name="tv_belum_daftar_click_text"><u>Daftar Sekarang</u></string>
    <string name="tv_nama_text">Nama</string>
    <string name="tv_email_text">Email</string>
    <string name="tv_sudah_punya_akun_text">Sudah Punya Akun?</string>
    <string name="tv_masuk_sekarang_text"><u>Masuk Sekarang</u></string>
    <string name="tv_action_bar_lupa_password_text">Lupa Password</string>
    <string name="lupa_password_deskripsi_text">Silakan masukkan email Anda pada kotak di bawah ini untuk mengatur ulang password Anda</string>
    <string name="kirim">Kirim</string>
    <string name="btn_location_text">Click Location</string>
    <string name="tv_kode_kelas_text">Kode Kelas</string>
    <string name="btn_kirim_lupa_password_deksripsi_text">"Kami telah mengirim password baru ke email Anda"</string>
    <string name="btn_oke_text">"Oke"</string>
    <string name="tv_title_materi_qiroah">Materi Qiroah</string>
    <string name="tv_title_materi_ibadah">Materi Ibadah</string>
    <string name="hint_tambah_komentar">Tambahkan Komentar Anda</string>
    <string name="tv_title_detail_materi_qiroah">Materi Qiroah > %1$s</string>
    <string name="tv_title_detail_materi_ibadah">Materi Ibadah > %1$s</string>
    <string name="tv_description_materi">Berikut adalah file materi pembelajaran %1$s</string>
    <string name="tv_document_name_pdf">Materi %1$d.pdf</string>
    <string name="tv_comment">Komentar</string>
    <string name="tv_title_menu_materi_detail">%1$s > %2$s</string>
    <string name="tv_description_menu_detail">Berikut adalah file materi pembelajaran Hukum Nun Sukun dan tanwin.</string>
    <string name="tv_name_document">Materi 1.pdf</string>
    <string name="tv_action_bar_daftarkelas">Daftar Kelas</string>
    <string name="tv_buatkelas">Buat Kelas</string>
    <string name="tv_namakelas">PQI-2C</string>
    <string name="tv_label_ruangkelas">Ruang</string>
    <string name="tv_ruangkelas">4.001</string>
    <string name="tv_jadwalkelas">Senin, 07.30 – 10.00</string>
    <string name="tv_anggotakelas"><u>Anggota</u></string>
    <string name="tv_jumlah_anggotakelas">25</string>
    <string name="tv_action_bar_buatkelas">Buat Kelas</string>
    <string name="tv_datakelas">Lengkapi Data Kelas</string>
    <string name="tv_edit_namakelas">Nama Kelas</string>
    <string name="tv_edit_ruangkelas">Ruang Kelas</string>
    <string name="tv_edit_jadwalkelas">Jadwal Kelas</string>
    <string name="et_hint_namakelas">PQI-1A</string>
    <string name="et_hint_ruangkelas">4.001</string>
    <string name="et_hint_jadwalkelas">Senin, 07.30 – 10.00</string>
    <string name="tv_action_bar_detailkelas">Kelas </string>
    <string name="tv_action_bar_namakelas">PQI-2C</string>
    <string name="tv_label_kode_kelas">Kode Kelas</string>
    <string name="tv_kode_kelas">Gr33DisG00d</string>
    <string name="tv_label_dosen">Dosen</string>
    <string name="tv_label_tambah_dosen">Tambah Dosen</string>
    <string name="tv_nama_dosen">Dosen 1</string>
    <string name="tv_nip">NIP</string>
    <string name="tv_nip_dosen">196903161999000000</string>
    <string name="tv_label_mahasiswa">Mahasiswa</string>
    <string name="tv_nama_mahasiswa">Mahasiswa 1</string>
    <string name="tv_nim">NIM</string>
    <string name="tv_nim_mahasiswa">11200910000000</string>
    <string name="tv_action_bar_tambahdosen">Tambah Dosen</string>
    <string name="et_search_dosen">Cari Nama / NIM</string>
    <string name="message_tambah_dosen">Dosen berhasil ditambahkan</string>
    <string name="btnMessage_tambah_dosen">Okay</string>
    <string name="tv_salam">Assalamu\'alaikum</string>
    <string name="tv_kelas">PQI-2C</string>
    <string name="sholat_subuh">Sholat Subuh</string>
    <string name="sholat_zuhur">Sholat Zuhur</string>
    <string name="sholat_ashar">Sholat Ashar</string>
    <string name="sholat_maghrib">Sholat Maghrib</string>
    <string name="sholat_isya">Sholat Isya</string>
    <string name="tv_lokasi">Lokasi Anda</string>
    <string name="waktu_sholat">%s WIB</string>
    <string name="tv_daerah">Cawang</string>
    <string name="tv_silabus">Silabus</string>
    <string name="tv_ibadah">Ibadah</string>
    <string name="tv_qiroah">Qiroah</string>
    <string name="tv_tugas">Tugas</string>
    <string name="tv_judul">Praktikum Qiroah dan Ibadah</string>
    <string name="tv_update_tugas_dosen">Anda memposting tugas baru</string>
    <string name="tv_tanggal_tugas">29 November 2022</string>
    <string name="tv_nama_tugas">Tugas 6</string>
    <string name="tv_deadline_tugas">30 Desember 2022</string>
    <string name="tv_tanggal_hafalan">29 November 2022</string>
    <string name="tv_nama_hafalan">Surah An-Naba</string>
    <string name="tv_deadline_hafalan">Tenggat waktu : 30 Desember 2022</string>
    <string name="tv_dashboard">Dashboard</string>
    <string name="tv_profil">Profil</string>
    <string name="message_logout">Yakin Log Out?</string>
    <string name="btnPositive_logout">Yes</string>
    <string name="btnNegative_logout">No</string>
    <string name="tv_action_bar_profil">Profil</string>
    <string name="tv_nama">Dosen</string>
    <string name="tv_nomor_induk">196903161999000000</string>
    <string name="tv_editProfil">Edit Profil</string>
    <string name="tv_pengaturan">Pengaturan</string>
    <string name="tv_logout">Log Out</string>
    <string name="tv_action_bar_informasi">Profil > Informasi Pribadi</string>
    <string name="tv_fakultas">Fakultas</string>
    <string name="tv_prodi">Program Studi</string>
    <string name="tv_email">saepul@mhs.uinjkt.ac.id</string>
    <string name="tv_password">Password</string>
    <string name="tv_tglahir">Tanggal Lahir</string>
    <string name="tv_nohp">No. Hp</string>
    <string name="tv_alamat">Alamat</string>
    <string name="hint_fakultas">Sains dan Teknologi</string>
    <string name="hint_prodi">Teknik Informatika</string>
    <string name="hint_password">********</string>
    <string name="hint_tglahir">17/08/1945</string>
    <string name="hint_nohp">08xxxxxxxxxx</string>
    <string name="hint_alamat">Jl. Ir H. Juanda No.95, Cemp. Putih</string>
    <string name="message_profilInfo">Perubahan berhasil disimpan</string>
    <string name="btnMessage_profilInfo">Okay</string>
    <string name="tv_action_bar_pengaturan">Pengaturan</string>
    <string name="tv_bahasa">Bahasa</string>
    <string name="btn_bahasa">Ubah</string>
    <string name="tv_camera">Kamera</string>
    <string name="tv_about">Tentang</string>
    <string name="tv_bantuan">Bantuan</string>
    <string name="tv_action_bar_pengaturan_bahasa">Profil > Pengaturan > Bahasa</string>
    <string name="tv_bahasa_indo">Bahasa Indonesia</string>
    <string name="btn_terapkan">Terapkan</string>
    <string name="message_btnTerapkan">Perubahan berhasil disimpan</string>
    <string name="btnMessage_btnTerapkan">Okay</string>
    <string name="btn_simpan">Simpan</string>
    <string name="tv_silabus_text">Silabus</string>
    <string name="btn_tambah_file_text">Tambah File</string>
    <string name="btn_hapus_file_text">Hapus File</string>
    <string name="tv_silabus_pdf_text">Silabus.pdf</string>
    <string name="btn_simpan_text">Simpan</string>
    <string name="btn_batal_text">Batal</string>
    <string name="tv_tambah_file_silabus_dialog">Silabus berhasil disimpan</string>
    <string name="tv_hapus_file_silabus_dialog">Yakin menghapus file silabus?</string>
    <string name="tv_empty_silabus_text">Dokumen Belum Diunggah</string>
    <string name="tv_create_topic_learning">Buat Topik Belajar</string>
    <string name="ed_desc_hint">Deskripsi</string>
    <string name="desc_iv_attach_files">Attach Files</string>
    <string name="desc_iv_insert_link">Insert Link</string>
    <string name="desc_iv_google_drive">Using Google Drive</string>
    <string name="desc_iv_image_attach">Attach Images</string>
    <string name="desc_iv_mic_attach">Record Voices</string>
    <string name="desc_iv_logo_back_circle_dosen">Tombol Back Materi Dosen</string>
    <string name="desc_iv_logo_documents">Logo Document</string>
    <string name="desc_iv_logo_tugas">Logo Tugas</string>
    <string name="desc_iv_logo_header">Logo Header</string>
    <string name="desc_iv_logo_close">Logo Close/Remove items</string>
    <string name="desc_tv_desc_title_materi_dosen">Deskripsi (Opsional)</string>
    <string name="tv_btn_simpan_materi_dosen">Simpan</string>
    <string name="tv_btn_hapus_materi_dosen">Hapus</string>
    <string name="tv_btn_posting_materi_dosen">Posting</string>
    <string name="hint_et_insert_topic_materi">Topik</string>
    <string name="tv_btn_tambahkan_materi_dosen">Tambahkan</string>
    <string name="tv_batal_tambahkan_materi_dosen">Batal</string>
    <string name="desc_ic_image_profile">Ikon Foto Profil</string>
    <string name="desc_iv_icon_send">Icon Send</string>
    <string name="desc_iv_icon_close">Icon Close</string>
    <string name="desc_btn_menu_detail">Icon Right Arrow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_iv_logo_kelas">Logo Kelas</string>
    <string name="desc_iv_logo_waktu">Logo Waktu</string>
    <string name="desc_iv_logo_lokasi">Logo Lokasi</string>
    <string name="desc_iv_logo_ibadah">Logo Ibadah</string>
    <string name="desc_iv_logo_silabus">Logo Silabus</string>
    <string name="desc_iv_logo_qiroah">Logo Qiroah</string>
    <string name="desc_iv_logo_bahasa">Logo Bahasa</string>
    <string name="desc_iv_logo_camera">Logo Camera</string>
    <string name="desc_iv_logo_about">Logo About</string>
    <string name="desc_iv_logo_bantuan">Logo Bantuan</string>
    <string name="desc_iv_logo_editprofil">Logo Edit Profil</string>
    <string name="btn_jenis_tugas">Jenis Tugas</string>
    <string name="tv_titleappbar_tugas">Tugas</string>
    <string name="desc_iv_task_tugas">Icon Task Tugas</string>
    <string name="tv_nama_task_tugas">Tugas 1</string>
    <string name="tv_tenggat_waktu_tugas">Tenggat Waktu : %s</string>
    <string name="tv_tugas_praktikum_qiroah">Praktikum Qiroah</string>
    <string name="tv_belum_ada_tugas_qiroah">Belum ada tugas praktikum qiroah</string>
    <string name="tv_tugas_praktikum_ibadah">Praktikum Ibadah</string>
    <string name="tv_belum_ada_tugas_ibadah">Belum ada tugas praktikum ibadah</string>
    <string name="tv_tugas_hafalan_surah">Hafalan Surah</string>
    <string name="tv_belum_ada_tugas_surah">Belum ada tugas Hafalan Surah</string>
    <string name="tv_tugas_hafalan_doa">Hafalan Doa</string>
    <string name="tv_belum_ada_tugas_hafalan_doa">Belum ada tugas Hafalan Doa</string>
    <string name="tv_title_tugas_detail_mahasiswa"><![CDATA[Tugas > %s]]></string>
    <string name="desc_iv_logo_file_terlampir">Logo File Terlampir</string>
    <string name="tv_silahkan_upload_file">Silahkan Upload File Tugas Anda</string>
    <string name="btn_tambah_file_upload">Tambah File +</string>
    <string name="tv_title_jenis_tugas_mahasiswa"><![CDATA[Tugas > %s]]></string>
    <string name="tv_date_file_mahasiswa_terlampir">Diupload pada %s</string>
    <string name="tv_nama_file_mahasiswa_terlampir">File Jawaban Tugas 4</string>
    <string name="desc_iv_icon_close_download_file">Icon Download atau Delete</string>
    <string name="desc_ic_detail_kelas">Logo Detail Kelas</string>
</resources>