<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo_back_circle_button_dosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_circle_left_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desc_iv_logo_back_circle_dosen"/>

    <TextView
        android:id="@+id/tv_title_menu_detail_dosen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_logo_back_circle_button_dosen"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tv_title_menu_materi_detail"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="16dp"/>


    <TextView
        android:id="@+id/tv_desc_title_materi_dosen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/desc_tv_desc_title_materi_dosen"
        app:layout_constraintTop_toBottomOf="@id/tv_title_menu_detail_dosen"
        app:layout_constraintEnd_toEndOf="@id/et_desc_detail_materi_dosen"
        app:layout_constraintStart_toStartOf="@id/et_desc_detail_materi_dosen"
        android:fontFamily="@font/inter"
        android:textSize="16sp"
        android:padding="2dp"
        android:textColor="@color/black_090A0A"/>

    <EditText
        android:importantForAutofill="no"
        android:id="@+id/et_desc_detail_materi_dosen"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/box_shape"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_title_materi_dosen"
        android:inputType="textMultiLine"
        android:padding="15dp"
        android:gravity="start"
        android:hint="@string/ed_desc_hint"
        android:fontFamily="@font/inter_medium"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/ll_list_logo_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_desc_detail_materi_dosen"
        app:layout_constraintStart_toStartOf="@id/et_desc_detail_materi_dosen"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_attach_file"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_attach_file"
            android:contentDescription="@string/desc_iv_attach_files"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:id="@+id/iv_insert_link"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/desc_iv_insert_link"
            android:src="@drawable/ic_sharp_insert_link" />

        <ImageView
            android:id="@+id/iv_google_drive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_google_drive"
            android:contentDescription="@string/desc_iv_google_drive"
            android:layout_marginEnd="10dp"/>
        
        <ImageView
            android:id="@+id/iv_image_attach"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_image_attach"
            android:contentDescription="@string/desc_iv_image_attach"
            android:layout_marginEnd="10dp"/>
        
        <ImageView
            android:id="@+id/iv_mic_attach"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_mic_attach"
            android:contentDescription="@string/desc_iv_mic_attach"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_documents_uploaded_dosen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_list_logo_upload"
        app:layout_constraintStart_toStartOf="@id/ll_list_logo_upload"
        app:layout_constraintEnd_toEndOf="@id/et_desc_detail_materi_dosen"
        android:layout_marginTop="32dp"
        android:padding="6dp"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:background="@drawable/round_shape_without_stroke">
        <ImageView
            android:id="@+id/iv_logo_document_dosen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_documentwithtextstrech"
            android:contentDescription="@string/desc_iv_logo_documents"/>
        <TextView
            android:id="@+id/tv_name_document"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/tv_name_document"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/inter_medium"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_weight="0.9"/>
        <ImageView
            android:id="@+id/iv_logo_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_close_with_margin"
            android:contentDescription="@string/desc_iv_logo_close"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/et_desc_detail_materi_dosen"
        app:layout_constraintStart_toStartOf="@id/et_desc_detail_materi_dosen"
        app:layout_constraintTop_toBottomOf="@+id/ll_documents_uploaded_dosen">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_simpan_materi_dosen"
            style="@style/ButtonSimpanHapusPostingMateriDosen"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_button_simpan_48dp"
            android:text="@string/tv_btn_simpan_materi_dosen"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_hapus_materi_dosen"
            style="@style/ButtonSimpanHapusPostingMateriDosen"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_button_hapus_48dp"
            android:text="@string/tv_btn_hapus_materi_dosen"
            android:layout_marginBottom="20dp"
            android:textColor="@color/blue_06283d"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_posting_materi_dosen"
            style="@style/ButtonSimpanHapusPostingMateriDosen"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_button_simpan_48dp"
            android:text="@string/tv_btn_posting_materi_dosen"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:visibility="gone"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>