<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_daftar_kelas"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:paddingVertical="5dp">

        <ImageView
            android:id="@+id/ic_detail_kelas"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/desc_ic_detail_kelas"
            android:src="@drawable/ic_detail_kelas"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tv_namakelas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/navy_06283D"
            android:textSize="24sp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@id/ll_detail_kelas"
            app:layout_constraintStart_toEndOf="@id/ic_detail_kelas"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tv_namakelas" />

        <TextView
            android:id="@+id/tv_label_ruangkelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/tv_label_ruangkelas"
            android:textColor="@color/grey_636363"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/tv_namakelas"
            app:layout_constraintTop_toBottomOf="@id/tv_namakelas" />

        <TextView
            android:id="@+id/tv_ruangkelas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/grey_636363"
            android:textSize="15sp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@id/ll_detail_kelas"
            app:layout_constraintStart_toEndOf="@id/tv_label_ruangkelas"
            app:layout_constraintTop_toBottomOf="@id/tv_namakelas"
            tools:text="@string/tv_ruangkelas" />

        <TextView
            android:id="@+id/tv_jadwalkelas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/inter"
            android:textColor="@color/grey_8B9596"
            android:textSize="16sp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@id/ll_detail_kelas"
            app:layout_constraintStart_toStartOf="@id/tv_namakelas"
            app:layout_constraintTop_toBottomOf="@id/tv_ruangkelas"
            tools:text="@string/tv_jadwalkelas" />

        <LinearLayout
            android:id="@+id/ll_detail_kelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_anggotakelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_anggotakelas" />

            <TextView
                android:id="@+id/tv_jumlah_anggotakelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                tools:text="@string/tv_jumlah_anggotakelas" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
