<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/action_bar_pengaturan"
        style="@style/action_bar_blue"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_action_bar_pengaturan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/tv_action_bar_pengaturan"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/action_bar_pengaturan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/action_bar_pengaturan" />


    <ImageView
        android:id="@+id/ic_bahasa"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="78dp"
        android:contentDescription="@string/desc_iv_logo_bahasa"
        android:src="@drawable/ic_bahasa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_action_bar_pengaturan" />

    <TextView
        android:id="@+id/tv_bahasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/tv_bahasa"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/ic_bahasa"
        app:layout_constraintStart_toEndOf="@id/ic_bahasa"
        app:layout_constraintTop_toTopOf="@id/ic_bahasa" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bahasa"
        style="@style/btn_blue_rounded"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/btn_bahasa"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_bahasa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_bahasa"
        app:layout_constraintTop_toTopOf="@id/tv_bahasa" />

    <View
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/navy_06283D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bahasa" />

    <ImageView
        android:id="@+id/ic_camera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/desc_iv_logo_camera"
        android:src="@drawable/ic_camera"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/ic_bahasa"
        app:layout_constraintTop_toBottomOf="@id/ic_bahasa" />

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/tv_camera"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/ic_camera"
        app:layout_constraintStart_toEndOf="@id/ic_camera"
        app:layout_constraintTop_toTopOf="@id/ic_camera" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tv_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_camera" />

    <View
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/navy_06283D"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_camera" />

    <ImageView
        android:id="@+id/ic_about"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/desc_iv_logo_about"
        android:src="@drawable/ic_about"
        app:layout_constraintStart_toStartOf="@id/ic_camera"
        app:layout_constraintTop_toBottomOf="@id/ic_camera" />

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/tv_about"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/ic_about"
        app:layout_constraintStart_toEndOf="@id/ic_about"
        app:layout_constraintTop_toTopOf="@id/ic_about" />

    <View
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/navy_06283D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_about" />

    <ImageView
        android:id="@+id/ic_bantuan"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/desc_iv_logo_bantuan"
        android:src="@drawable/ic_bantuan"
        app:layout_constraintStart_toStartOf="@id/ic_about"
        app:layout_constraintTop_toBottomOf="@id/ic_about" />

    <TextView
        android:id="@+id/tv_bantuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/tv_bantuan"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/ic_bantuan"
        app:layout_constraintStart_toEndOf="@id/ic_bantuan"
        app:layout_constraintTop_toTopOf="@id/ic_bantuan" />

    <View
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/navy_06283D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bantuan" />

</androidx.constraintlayout.widget.ConstraintLayout>